--- a/CSS - My Site/css/style.css
+++ b/CSS - My Site/css/style.css
@@ -42,9 +42,10 @@ hr {
 }
 
 .main-container {
+    position: relative;
     color: #66BFBF;
     background-color: rgb(225, 255, 245);
-    height: 100%;
+    height: 100vh;
     padding: 4rem 0 0 0;
     font-family: "Montserrat", serif;
 }
