--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List</title>
-</head>
-<body>
-     <h1>It's a <%= dayEJS %>!</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Todo List</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <h1><%= dayEJS %> </h1>
+        <form action="/" method="post">
+            <input type="text" name="newItem" id="list-item">
+            <button type="submit">Add Item</button>
+        </form>
+        <ul>
+            <li>Buy food</li>
+            <li>Cook food</li>
+            <li>Eat food</li>
+        </ul>
+    </body>
 </html>
