--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -14,9 +14,9 @@
             <button type="submit">Add Item</button>
         </form>
         <ul>
-            <li>Buy food</li>
-            <li>Cook food</li>
-            <li>Eat food</li>
+            <% for( var i = 0; i < newListItem.length; i ++){ %>
+                <li><%= newListItem[i] %> </li>
+            <% } %>
         </ul>
     </body>
 </html>
