--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -8,15 +8,26 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1><%= dayEJS %> </h1>
-        <form action="/" method="post">
-            <input type="text" name="newItem" id="list-item">
-            <button type="submit">Add Item</button>
-        </form>
-        <ul>
+
+        <div class="box" id="heading">
+            <h1><%= dayEJS %> </h1>
+        </div>
+
+        <div class="box">
             <% for( var i = 0; i < newListItem.length; i ++){ %>
-                <li><%= newListItem[i] %> </li>
+                <div class="item">
+                    <input type="checkbox">
+                    <p>
+                        <%= newListItem[i] %>
+                    </p>
+                </div>
             <% } %>
-        </ul>
+
+            <form class="item" action="/" method="post">
+                <input type="text" name="newItem" placeholder="Add New Item" autocomplete="off">
+                <button type="submit">+</button>
+            </form>
+        </div>
+
     </body>
 </html>
