--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Todo List</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-
+<%- include("header"); -%>
         <div class="box" id="heading">
-            <h1><%= dayEJS %> </h1>
+            <h1><%= listTitle %> </h1>
         </div>
 
         <div class="box">
@@ -25,9 +15,11 @@
 
             <form class="item" action="/" method="post">
                 <input type="text" name="newItem" placeholder="Add New Item" autocomplete="off">
-                <button type="submit">+</button>
+                <button 
+                    type="submit" 
+                    name="value" 
+                    value= "<%=listTitle%>"
+                >+</button>
             </form>
         </div>
-
-    </body>
-</html>
+<%- include("footer") -%> 
