--- a/Blog-with-DB/views/home.ejs
+++ b/Blog-with-DB/views/home.ejs
@@ -8,8 +8,8 @@
 
     <h1><%=post.title%></h1>
     <p>
-    <%=post.content.substring(0, 100) + " ..."%>
-    <a href="/posts/<%=post.title%>">Read More</a>
+    <%=post.content.substring(0, 250) + " ..."%>
+    <a href="/posts/<%=post._id%>">Read More</a>
     </p>
 
 
